Text alignment for Card fix

--- a/src/css/Card.css
+++ b/src/css/Card.css
@@ -7,6 +7,7 @@ details:last-of-type {
 }
 
 details {
+    text-align: initial;
     width: 95%;
     border: 1px solid #000;
 }
